--- a/index.html
+++ b/index.html
@@ -333,6 +333,8 @@ SAP’s systems used daily: Enterprise Analytics Store, BusinessObjects, CRM, IS
 		    				</div>
 	    				</div>
 	    			-->
+
+
 					  </div>
 					  <div id="page-3" class= "page three">
 					  	<h2 class="heading">Skills</h2>
@@ -342,7 +344,7 @@ SAP’s systems used daily: Enterprise Analytics Store, BusinessObjects, CRM, IS
 						        <h2 class="h5 font-weight-bold text-center mb-4">Hadoop</h2>
 
 						        <!-- Progress bar 1 -->
-						        <div class="progress mx-auto" data-value='60'>
+						        <div class="progress mx-auto" data-value='40'>
 						          <span class="progress-left">
                         <span class="progress-bar border-primary"></span>
 						          </span>
@@ -350,13 +352,13 @@ SAP’s systems used daily: Enterprise Analytics Store, BusinessObjects, CRM, IS
                         <span class="progress-bar border-primary"></span>
 						          </span>
 						          <div class="progress-value w-100 h-100 rounded-circle d-flex align-items-center justify-content-center">
-						            <div class="h2 font-weight-bold">60<sup class="small">%</sup></div>
+						            <div class="h2 font-weight-bold">40<sup class="small">%</sup></div>
 						          </div>
 						        </div>
 						        <!-- END -->
 
 						        <!-- Demo info -->
-						        <div class="row text-center mt-4">
+						       <!-- <div class="row text-center mt-4">
 						          <div class="col-6 border-right">
 						            <div class="h4 font-weight-bold mb-0">40%</div><span class="small text-gray">2019</span>
 						          </div>
@@ -373,7 +375,8 @@ SAP’s systems used daily: Enterprise Analytics Store, BusinessObjects, CRM, IS
 						        <h2 class="h5 font-weight-bold text-center mb-4">Data Warehousing</h2>
 
 						        <!-- Progress bar 1 -->
-						        <div class="progress mx-auto" data-value='80'>
+						        <!-- Progress bar 1 -->
+						        <div class="progress mx-auto" data-value='50'>
 						          <span class="progress-left">
                         <span class="progress-bar border-primary"></span>
 						          </span>
@@ -381,21 +384,11 @@ SAP’s systems used daily: Enterprise Analytics Store, BusinessObjects, CRM, IS
                         <span class="progress-bar border-primary"></span>
 						          </span>
 						          <div class="progress-value w-100 h-100 rounded-circle d-flex align-items-center justify-content-center">
-						            <div class="h2 font-weight-bold">65<sup class="small">%</sup></div>
+						            <div class="h2 font-weight-bold">50<sup class="small">%</sup></div>
 						          </div>
 						        </div>
 						        <!-- END -->
 
-						        <!-- Demo info -->
-						        <div class="row text-center mt-4">
-						          <div class="col-6 border-right">
-						            <div class="h4 font-weight-bold mb-0">55%</div><span class="small text-gray">2019</span>
-						          </div>
-						          <div class="col-6">
-						            <div class="h4 font-weight-bold mb-0">10%</div><span class="small text-gray">2018</span>
-						          </div>
-						        </div>
-						        <!-- END -->
 						      </div>
 						    </div>
 
@@ -418,14 +411,14 @@ SAP’s systems used daily: Enterprise Analytics Store, BusinessObjects, CRM, IS
 						        <!-- END -->
 
 						        <!-- Demo info -->
-						        <div class="row text-center mt-4">
+						        <!--<div class="row text-center mt-4">
 						          <div class="col-6 border-right">
 						            <div class="h4 font-weight-bold mb-0">55%</div><span class="small text-gray">2019</span>
 						          </div>
 						          <div class="col-6">
 						            <div class="h4 font-weight-bold mb-0">15%</div><span class="small text-gray"><2019</span>
 						          </div>
-						        </div>
+						        </div> 
 						        <!-- END -->
 						      </div>
 						    </div>
@@ -436,8 +429,8 @@ SAP’s systems used daily: Enterprise Analytics Store, BusinessObjects, CRM, IS
 										<h3>Hive - Ambari - Zeppelin</h3>
 										<div class="progress">
 										 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="90"
-										  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
-										    <span>90%</span>
+										  	aria-valuemin="0" aria-valuemax="100" style="width:65%">
+										    <span>65%</span>
 										  	</div>
 										</div>
 									</div>
@@ -447,8 +440,8 @@ SAP’s systems used daily: Enterprise Analytics Store, BusinessObjects, CRM, IS
 										<h3>Teradata SQL</h3>
 										<div class="progress">
 										 	<div class="progress-bar color-2" role="progressbar" aria-valuenow="85"
-										  	aria-valuemin="0" aria-valuemax="100" style="width:85%">
-										    <span>85%</span>
+										  	aria-valuemin="0" aria-valuemax="100" style="width:75%">
+										    <span>75%</span>
 										  	</div>
 										</div>
 									</div>
@@ -458,8 +451,8 @@ SAP’s systems used daily: Enterprise Analytics Store, BusinessObjects, CRM, IS
 										<h3>Data Visualization tools</h3>
 										<div class="progress">
 										 	<div class="progress-bar color-3" role="progressbar" aria-valuenow="95"
-										  	aria-valuemin="0" aria-valuemax="100" style="width:95%">
-										    <span>95%</span>
+										  	aria-valuemin="0" aria-valuemax="100" style="width:75%">
+										    <span>75%</span>
 										  	</div>
 										</div>
 									</div>
@@ -469,7 +462,7 @@ SAP’s systems used daily: Enterprise Analytics Store, BusinessObjects, CRM, IS
 										<h3>SAS Campaign</h3>
 										<div class="progress">
 										 	<div class="progress-bar color-4" role="progressbar" aria-valuenow="90"
-										  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
+										  	aria-valuemin="0" aria-valuemax="100" style="width:60%">
 										    <span>40%</span>
 										  	</div>
 										</div>
@@ -480,7 +473,7 @@ SAP’s systems used daily: Enterprise Analytics Store, BusinessObjects, CRM, IS
 										<h3>R</h3>
 										<div class="progress">
 										 	<div class="progress-bar color-5" role="progressbar" aria-valuenow="70"
-										  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
+										  	aria-valuemin="0" aria-valuemax="100" style="width:75%">
 										    <span>70%</span>
 										  	</div>
 										</div>
@@ -491,8 +484,8 @@ SAP’s systems used daily: Enterprise Analytics Store, BusinessObjects, CRM, IS
 										<h3>Python</h3>
 										<div class="progress">
 										 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
-										  	aria-valuemin="0" aria-valuemax="100" style="width:80%">
-										    <span>80%</span>
+										  	aria-valuemin="0" aria-valuemax="100" style="width:60%">
+										    <span>45%</span>
 										  	</div>
 										</div>
 									</div>
