--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
 	          <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resume</span></a></li>
 	          <li class="nav-item"><a href="#services-section" class="nav-link"><span>Services</span></a></li>
 	          <li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projects</span></a></li>
-	          <li class="nav-item"><a href="#blog-section" class="nav-link"><span>My Blog</span></a></li>
 	          <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
 	        </ul>
 	      </div>
@@ -89,8 +88,8 @@
 		            <p>I'm a Industrial Engineer, currently working as a Big Data Analyst for Telefónica's Big Data team and also I'm a teacher assistant at UTN.BA.</p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Name:</span> <span>Brenda Grao</span></li>
-		            	<li class="d-flex"><span>Bachelor:</span> <span>Industrial Engineer @ UTN.BA</span></li>
 		            	<li class="d-flex"><span>Diploma:</span> <span>Big Data @ ITBA</span></li>
+		            	<li class="d-flex"><span>Bachelor:</span> <span>Industrial Engineer @ UTN.BA</span></li>
 		            	<li class="d-flex"><span>High School:</span> <span>Electronic Technician @ CIERG</span></li>
 		            	<li class="d-flex"><span>Language:</span> <span>English Advanced - Spanish Native</span></li>
 		            	<li class="d-flex"><span>Address:</span> <span>Ciudad Autónoma de Buenos Aires · Argentina</span></li>
@@ -151,6 +150,33 @@
 					<div class="col-md-9">
 					  <div id="page-1" class= "page one">
 					  	<h2 class="heading">Education</h2>
+
+	    				<div class="resume-wrap d-flex ftco-animate">
+	    					<div class="icon d-flex align-items-center justify-content-center">
+					    		<span class="flaticon-ideas"></span>
+					    	</div>
+					    	<div class="text pl-3">
+		    					<span class="date">Diploma</span>
+		    					<h2>Big Data Certificate.</h2>
+		    					<span class="position">Instituto Tecnológico de Buenos Aires [ITBA] - Postgraduate School</span>
+		    					<p> <div class="subheading mb-3">Program</div>
+ 								       <ul class="fa-ul mb-0">
+							          <li>
+							            <i class="fa-li fa fa-check"></i>
+							            Data Warehousing & OLAP.</li>
+							          <li>
+							            <i class="fa-li fa fa-check"></i>
+							            Data Mining & Machine Learning</li>
+										<li>
+							            <i class="fa-li fa fa-check"></i>
+							            Techniques and tools for Big Data.</li>
+							            <li>
+							            <i class="fa-li fa fa-check"></i>
+							            Big Data Visualization.</li>
+										Total hours: 112hs.	</p>
+		    				</div>
+	    				</div>
+					  
 					    <div class="resume-wrap d-flex ftco-animate">
 					    	<div class="icon d-flex align-items-center justify-content-center">
 					    		<span class="flaticon-ideas"></span>
@@ -174,32 +200,8 @@
 		    					<p>Completed up to 3rd year (of six).</p>
 		    				</div>
 	    				</div>
-	    				<div class="resume-wrap d-flex ftco-animate">
-	    					<div class="icon d-flex align-items-center justify-content-center">
-					    		<span class="flaticon-ideas"></span>
-					    	</div>
-					    	<div class="text pl-3">
-		    					<span class="date">Diploma</span>
-		    					<h2>Big Data Certificate.</h2>
-		    					<span class="position">Instituto Tecnológico de Buenos Aires [ITBA] - Postgraduate School</span>
-		    					<p>
-		    						 <div class="subheading mb-3">Program</div>
- 								       <ul class="fa-ul mb-0">
-							          <li>
-							            <i class="fa-li fa fa-check"></i>
-							            Data Warehousing & OLAP.</li>
-							          <li>
-							            <i class="fa-li fa fa-check"></i>
-							            Data Mining & Machine Learning</li>
-										<li>
-							            <i class="fa-li fa fa-check"></i>
-							            Techniques and tools for Big Data.</li>
-							            <li>
-							            <i class="fa-li fa fa-check"></i>
-							            Big Data Visualization.</li>
-										Total hours: 112hs.	
 
-		    					</p>
+
 		    				<!--</div>
 	    				</div>
 	    				<div class="resume-wrap d-flex ftco-animate">
@@ -230,9 +232,7 @@ Using big data tools like Hadoop ecosystem, Sqoop, Teradata (Datawarehouse) amon
             <i class="fa-li fa fa-check"></i>
             Implementation management.</li>
             </p> -->
-		    				</div>
-	    				</div>
-					  </div>
+
 
 					  <div id="page-2" class= "page two">
 					  	<h2 class="heading">Experience</h2>
@@ -666,8 +666,8 @@ Total hours: 172hs.
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-1.jpg);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="#">Bar Race</a></h3>
-	    					<span></span>
+	    					<h3><a href="#">Line chart race</a></h3>
+	    					<span>An animated line or “bump” chart to show changing rank over time</span>
 	    				</div>
     				</div>
   				</div>
@@ -719,111 +719,6 @@ Total hours: 172hs.
     			</div>
     		</div>
     	</div>
-    </section>
-
-    <section class="ftco-section ftco-no-pt ftco-no-pb ftco-counter img" id="section-counter">
-    	<div class="container-fluid px-md-5">
-				<div class="row d-md-flex align-items-center">
-          <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
-            <div class="block-18 shadow">
-              <div class="text">
-                <strong class="number" data-number="100">0</strong>
-                <span>Awards</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
-            <div class="block-18 shadow">
-              <div class="text">
-                <strong class="number" data-number="1200">0</strong>
-                <span>Complete Projects</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
-            <div class="block-18 shadow">
-              <div class="text">
-                <strong class="number" data-number="1200">0</strong>
-                <span>Happy Customers</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
-            <div class="block-18 shadow">
-              <div class="text">
-                <strong class="number" data-number="500">0</strong>
-                <span>Cups of coffee</span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-
-    <section class="ftco-section" id="blog-section">
-      <div class="container">
-        <div class="row justify-content-center mb-5 pb-5">
-          <div class="col-md-7 heading-section text-center ftco-animate">
-            <h1 class="big big-2">Blog</h1>
-            <h2 class="mb-4">Our Blog</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
-          </div>
-        </div>
-        <div class="row d-flex">
-          <div class="col-md-4 d-flex ftco-animate">
-          	<div class="blog-entry justify-content-end">
-              <a href="single.html" class="block-20" style="background-image: url('images/image_1.jpg');">
-              </a>
-              <div class="text mt-3 float-right d-block">
-                <h3 class="heading"><a href="single.html">Why Lead Generation is Key for Business Growth</a></h3>
-                <div class="d-flex align-items-center mb-3 meta">
-	                <p class="mb-0">
-	                	<span class="mr-2">Sept. 12, 2019</span>
-	                	<a href="#" class="mr-2">Admin</a>
-	                	<a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>
-	                </p>
-                </div>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 d-flex ftco-animate">
-          	<div class="blog-entry justify-content-end">
-              <a href="single.html" class="block-20" style="background-image: url('images/image_2.jpg');">
-              </a>
-              <div class="text mt-3 float-right d-block">
-                <h3 class="heading"><a href="single.html">Why Lead Generation is Key for Business Growth</a></h3>
-                <div class="d-flex align-items-center mb-3 meta">
-	                <p class="mb-0">
-	                	<span class="mr-2">Sept. 12, 2019</span>
-	                	<a href="#" class="mr-2">Admin</a>
-	                	<a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>
-	                </p>
-                </div>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 d-flex ftco-animate">
-          	<div class="blog-entry">
-              <a href="single.html" class="block-20" style="background-image: url('images/image_3.jpg');">
-              </a>
-              <div class="text mt-3 float-right d-block">
-                <h3 class="heading"><a href="single.html">Why Lead Generation is Key for Business Growth</a></h3>
-                <div class="d-flex align-items-center mb-3 meta">
-	                <p class="mb-0">
-	                	<span class="mr-2">Sept. 12, 2019</span>
-	                	<a href="#" class="mr-2">Admin</a>
-	                	<a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>
-	                </p>
-                </div>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
     </section>
 
     <section class="ftco-section ftco-hireme img" style="background-image: url(images/bg_1.jpg)">
